add magic rolls

--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -5,6 +5,10 @@ rolld: "&7Выпал куб &9защиты&7 на &e%dice%&7 персонажу 
 rolla: "&7Выпал куб &cатаки&7 на &e%dice%&7 персонажу &e%player%&7."
 rollr: "&7Выпал куб &fуворота&7 на &e%dice%&7 персонажу &e%player%&7."
 
+rolldm: "&7Выпал куб &9особой защиты&7 на &e%dice%&7 персонажу &e%player%&7."
+rollam: "&7Выпал куб &cособой атаки&7 на &e%dice%&7 персонажу &e%player%&7."
+rollrm: "&7Выпал куб &fособого уворота&7 на &e%dice%&7 персонажу &e%player%&7."
+
 # Seen by admins
 rolladd: "&7Теперь персонажу &e%player%&7 выпадают числа из диапазона &e+%amount%&7."
 rollremove: "&7Теперь персонажу &e%player%&7 выпадают числа из диапазона &e-%amount%&7."
