--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -16,16 +16,25 @@ commands:
     description: Rolls the dice of resist(1-12).
     usage: /rollr
     permission: dice.use
+
+  rollam:
+    description: Rolls the dice of magic attack(1-12).
+    usage: /rollam
+    permission: dice.use
+  rolldm:
+    description: Rolls the dice of magic defence(1-12).
+    usage: /rolldm
+    permission: dice.use
+  rollrm:
+    description: Rolls the dice of magic resist(1-12).
+    usage: /rollrm
+    permission: dice.use
   #admin scope
-  dice:
-    description: Admin command for reloading the dice plugin.
-    usage: /dice reload
-    permission: dice.admin
   rolladd:
     description: Admin command for adding some value to the rolling result of another player.
-    usage: /rolladd [amount] [player]
+    usage: /rolladd [dice] [amount] [player]
     permission: dice.admin
   rollremove:
     description: Admin command for substracting some value from the rolling result of another player.
-    usage: /rollremove [amount] [player]
+    usage: /rollremove [dice] [amount] [player]
     permission: dice.admin
